--- a/semana05/index.html
+++ b/semana05/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 05</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -19,6 +19,50 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="sectionMain">
+            <h2>Seção de Introdução</h2>
+            <p>
+                Esta é a página de exemplos de tags, no qual são utilizadas várias tags como <strong>HEADER</strong>,
+                <strong>NAV</strong>, <Strong>MAIN</Strong>, entre outras.
+            </p>
+            <img src="https://i.pinimg.com/236x/a0/8b/3f/a08b3f7e5d93604c514a234bb499f177.jpg" alt="">
+        </section>
+
+        <section class="sectionMain sectionCursos">
+            <h2>Unidades Curriculares</h2>
+            <div class="divConteudo">
+                <div class="divItem">
+                    <h2>Lógica de Programação</h2>
+                    <p>Unidade curricular básica para os cursos de desenvolvimento.</p>
+                </div>
+                <div class="divItem">
+                    <h2>Programação de Aplicativos</h2>
+                    <p>Unidade curricular intermediária para os cursos de desenvolvimento</p>
+                </div>
+                <div class="divItem">
+                    <h2>Desenvolvimento de Sistemas</h2>
+                    <p>Unidade curricular avançada para os cursos de desenvolvimento.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="sectionMain sectionContato">
+            <h2>Contato</h2>
+            <form action="">
+                <label for="name">Nome completo:</label>
+                <input type="text" name="name" id="name">
+                <label for="email">E-mail:</label>
+                <input type="email" name="email" id="email">
+                <label for="message">Mensagem:</label>
+                <textarea name="message" id="message" rows="5"></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </section>
+
+    </main>
+
 </body>
 
 </html>
