--- a/semana05/index.html
+++ b/semana05/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semana 05</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 
 <body>
@@ -13,8 +14,8 @@
         <h1>Desenvolvimento de Sistemas 2024</h1>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
