adição do Enter

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -16,7 +16,7 @@
         />
         <link rel="stylesheet" href="styles/styles.css" />
     </head>
-    <body>
+    <body onkeypress="capturarTecla(event)">
         <div class="container">
             <h1>ToDo List</h1>
             <div class="group-input">
