--- a/semana09/src/index.html
+++ b/semana09/src/index.html
@@ -15,38 +15,108 @@
     <form>
       <h2>Cadastrar Veículo</h2>
       <div class="input-data">
-        <label for="modelo">Modelo</label>
-        <input type="text" id="modelo">
+        <label for="model">Modelo</label>
+        <input type="text" id="model">
       </div>
 
       <div class="input-data">
-        <label for="cor">Cor</label>
-        <input type="text" id="cor">
+        <label for="colour">Cor</label>
+        <input type="text" id="colour">
       </div>
 
       <div class="input-data">
-        <label for="ano">Ano</label>
-        <input type="number" id="ano">
+        <label for="year">Ano</label>
+        <input type="number" id="year">
       </div>
 
       <div class="input-data">
-        <label for="preco">Preço</label>
-        <input type="number" id="preco">
+        <label for="price">Preço</label>
+        <input type="number" id="price">
       </div>
 
       <div class="input-data">
-        <label for="placa">Placa</label>
-        <input type="text" id="placa">
+        <label for="plate">Placa</label>
+        <input type="text" id="plate">
       </div>
 
       <div class="input-data">
-        <label for="imagem">Imagem</label>
-        <input type="text" id="imagem">
+        <label for="image">Imagem</label>
+        <input type="text" id="image">
       </div>
+
+      <button id="singup-button">
+        Cadastrar
+      </button>
     </form>
 
-    <aside>
+    <aside id="vehicle-list">
+      <div class="card">
+        <img
+          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwchqI8Mni5Kp8ZcF2GEejzm0Fe8QVHFHJm6AoFKIfPfXqNiuGGDDb8M0rd1ozIVNsjmp8OykLOS_YMZf3wDEYcY1rFiHuzrRwrKtqfUpjiFjduBKUavBqW0OtHiQV_nxgDLQrXEDPcc-8/s1600/VW-Polo-2018+%25289%2529.JPG"
+          alt="ERRO">
+        <div class="info">
+          <strong>Polo MSI</strong>
+          <span>Cor: Branco</span>
+          <span>Ano: 2020</span>
+          <span>Preço: R$60.000,00</span>
+          <span>Placa: ABC-1D34 </span>
+        </div>
+        <div class="card-button">
+          <button id="see-button">Ver</button>
+          <button id="delete-button">Deletar</button>
+        </div>
+      </div>
 
+      <div class="card">
+        <img
+          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwchqI8Mni5Kp8ZcF2GEejzm0Fe8QVHFHJm6AoFKIfPfXqNiuGGDDb8M0rd1ozIVNsjmp8OykLOS_YMZf3wDEYcY1rFiHuzrRwrKtqfUpjiFjduBKUavBqW0OtHiQV_nxgDLQrXEDPcc-8/s1600/VW-Polo-2018+%25289%2529.JPG"
+          alt="ERRO">
+        <div class="info">
+          <strong>Polo MSI</strong>
+          <span>Cor: Branco</span>
+          <span>Ano: 2020</span>
+          <span>Preço: R$60.000,00</span>
+          <span>Placa: ABC-1D34 </span>
+        </div>
+        <div class="card-button">
+          <button id="see-button">Ver</button>
+          <button id="delete-button">Deletar</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwchqI8Mni5Kp8ZcF2GEejzm0Fe8QVHFHJm6AoFKIfPfXqNiuGGDDb8M0rd1ozIVNsjmp8OykLOS_YMZf3wDEYcY1rFiHuzrRwrKtqfUpjiFjduBKUavBqW0OtHiQV_nxgDLQrXEDPcc-8/s1600/VW-Polo-2018+%25289%2529.JPG"
+          alt="ERRO">
+        <div class="info">
+          <strong>Polo MSI</strong>
+          <span>Cor: Branco</span>
+          <span>Ano: 2020</span>
+          <span>Preço: R$60.000,00</span>
+          <span>Placa: ABC-1D34 </span>
+        </div>
+        <div class="card-button">
+          <button id="see-button">Ver</button>
+          <button id="delete-button">Deletar</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <img
+          src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgwchqI8Mni5Kp8ZcF2GEejzm0Fe8QVHFHJm6AoFKIfPfXqNiuGGDDb8M0rd1ozIVNsjmp8OykLOS_YMZf3wDEYcY1rFiHuzrRwrKtqfUpjiFjduBKUavBqW0OtHiQV_nxgDLQrXEDPcc-8/s1600/VW-Polo-2018+%25289%2529.JPG"
+          alt="ERRO">
+        <div class="info">
+          <strong>Polo MSI</strong>
+          <span>Cor: Branco</span>
+          <span>Ano: 2020</span>
+          <span>Preço: R$60.000,00</span>
+          <span>Placa: ABC-1D34 </span>
+        </div>
+        <div class="card-button">
+          <button id="see-button">Ver</button>
+          <button id="delete-button">Deletar</button>
+        </div>
+      </div>
     </aside>
   </main>
 </body>
